# python-project-template

./: .env.testing  README.md  pyproject.toml
.github/: pull_request_template.md
tools/: build_push_ecr.sh
